Baixa P5 e faz um MVP funcionante.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Kontra Game</title>
+  <title>p5 Instance Mode</title>
 </head>
 <body>
-  <!-- The canvas your game will draw on -->
-  <canvas id="game" width="640" height="480"></canvas>
-
-  <!-- Import Kontra.js from a CDN (hosted on the internet) -->
-  <script src="https://unpkg.com/kontra/kontra.min.js"></script>
-
-  <!-- Your game code -->
-  <script src="game.js"></script>
+  <script src="modules/p5.js"></script>
+  <script src="sketch.js"></script>
 </body>
 </html>
