Coloca o index.html em uma pasta separada.

--- a/Semana09_08/index.html
+++ b/Semana09_08/index.html
@@ -5,7 +5,7 @@
   <title>p5 Instance Mode</title>
 </head>
 <body>
-  <script src="modules/p5.js"></script>
+  <script src="../modules/p5.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
